--- a/resources/views/partials/forms/auth/signin-form.twig
+++ b/resources/views/partials/forms/auth/signin-form.twig
@@ -6,9 +6,8 @@
         <span class="text-only">Preferred Authentication Method</span>
     </div>
     <div class="form-text text-holder">
-        <input type="radio" name="signin[auth-method]" class="hno-radiobtn" id="rad1" checked><label for="rad1">Email</label>
-        <input type="radio" name="signin[auth-method]" class="hno-radiobtn" id="rad2"><label for="rad2">Sms</label>
-        <input type="radio" name="signin[auth-method]" class="hno-radiobtn" id="rad3"><label for="rad3">Google Auth</label>
+        <input type="radio" name="signin[auth-method]" class="hno-radiobtn" id="rad1" value="email" checked><label for="rad1">Email</label>
+        <input type="radio" name="signin[auth-method]" class="hno-radiobtn" id="rad2" value="sms"><label for="rad2">Sms</label>
     </div>
 
     <div class="form-button">
