--- a/resources/views/template/partials/html_blocks/navbar.twig
+++ b/resources/views/template/partials/html_blocks/navbar.twig
@@ -15,10 +15,10 @@
                     </div>
                     <div style="height: 1px;" role="main" aria-expanded="false" class="navbar-collapse collapse" id="bs">
                         <ul class="nav navbar-nav navbar-right">
+                            <li><a href="./">Coin Wrapper</a></li>
                             <li><a href="buy-sell">Buy/Sell</a></li>
                             <li><a href="about-us">About Us</a></li>
                             <li><a href="contact-us">Contact Us</a></li>
-                            <li><a href=""></a></li>
                             <li class="signin-button-holder">
                                 <a class="signin-button" href="sign-in">Sign In</a>
                             </li>
