--- a/resources/views/about-us.twig
+++ b/resources/views/about-us.twig
@@ -12,10 +12,10 @@
                 <div class="row">
                     <div class="col-md-6 text-center">
                         <div class="icons-animation-holder">
-                            <div class="aicon aicon1"><img src="images/aicon1.png" alt=""></div>
-                            <div class="aicon aicon2"><img src="images/aicon2.png" alt=""></div>
-                            <div class="aicon aicon3"><img src="images/aicon3.png" alt=""></div>
-                            <div class="aicon aicon4"><img src="images/aicon4.png" alt=""></div>
+                            <div class="aicon aicon1"><img src="" alt=""></div>
+                            <div class="aicon aicon2"><img src="" alt=""></div>
+                            <div class="aicon aicon3"><img src="" alt=""></div>
+                            <div class="aicon aicon4"><img src="" alt=""></div>
                             <div class="aicon aicon-main">
                                 
                             </div>
