--- a/resources/views/faqs.twig
+++ b/resources/views/faqs.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div id="header-holder" class="inner-header">
         <div class="bg-animation"></div>
-        <div class="whitebg"><img src="assets/img/whitebg.svg" alt=""></div>
+        <div class="whitebg"><img src="assets/img/headbg.svg" alt=""></div>
         {% include 'template/partials/html_blocks/navbar.twig' %}
         <div id="page-head" class="container-fluid inner-page">
             <div class="container">
