--- a/resources/views/template/partials/hero/create-account.twig
+++ b/resources/views/template/partials/hero/create-account.twig
@@ -7,7 +7,7 @@
             </div>
             <div class="col-sm-12 col-md-6">
                 <div class="buttons-holder">
-                    <a href="#" class="ybtn ybtn-accent-color">Create Your Account</a><a href="#" class="ybtn ybtn-white ybtn-shadow">Contact Us</a>
+                    <a href="sign-up" class="ybtn ybtn-accent-color">Create Your Account</a><a href="contact-us" class="ybtn ybtn-white">Contact Us</a>
                 </div>
             </div>
         </div>
