--- a/resources/views/partials/forms/auth/signin-form.twig
+++ b/resources/views/partials/forms/auth/signin-form.twig
@@ -1,6 +1,6 @@
 <form id="signinform">
     <div class="form-text">
-        <input type="email" name="signin[email]" placeholder="Enter Your Email Address" required>
+        <input type="email" name="signin[email]" placeholder="Enter Your Email Address or Phone Number" required>
     </div>
     <div class="form-text text-holder">
         <span class="text-only">Preferred Authentication Method</span>
