--- a/resources/views/template/app.twig
+++ b/resources/views/template/app.twig
@@ -21,5 +21,7 @@
     <script src="{{ base_url() }}/assets/js/bootstrap-slider.min.js"></script>
     <script src="{{ base_url() }}/assets/js/slick.min.js"></script>
     <script src="{{ base_url() }}/assets/js/main.js"></script>
+
+    <!--<script src="{{ base_url() }}/assets/js/app/{{ uri }}.js"></script>-->
 </body>
 </html>
