--- a/resources/views/template/partials/auth/main-links.twig
+++ b/resources/views/template/partials/auth/main-links.twig
@@ -1,7 +1,7 @@
 {% if uri == 'sign-in' %}
     <div class="menu-holder">
         <ul class="main-links">
-            <li><a class="normal-link" href="sign-up">Don’t have an account?</a></li>
+            <li class="hidden-xs"><a class="normal-link" href="sign-up">Don’t have an account?</a></li>
             <li><a class="sign-button" href="sign-up">Sign up</a></li>
         </ul>
     </div> 
@@ -10,7 +10,7 @@
 {% if uri == 'sign-up' %}
     <div class="menu-holder">
         <ul class="main-links">
-            <li><a class="normal-link" href="sign-in">You have an account?</a></li>
+            <li class="hidden-xs"><a class="normal-link" href="sign-in">You have an account?</a></li>
             <li><a class="sign-button" href="sign-in">Sign in</a></li>
         </ul>
     </div>
