--- a/resources/views/template/partials/html_blocks/footer.twig
+++ b/resources/views/template/partials/html_blocks/footer.twig
@@ -28,8 +28,8 @@
             </div>
             <div class="col-md-3">
                 <div class="address-holder">
-                    <div class="phone"><i class="fa fa-phone"></i> +233 00 000 0000</div>
-                    <div class="email"><i class="fa fa-envelope"></i> info@coin-wrapper.com</div>
+                    <div class="phone"><a href=""><i class="fa fa-phone"></i> +233 00 000 0000</a></div>
+                    <div class="email"><a href=""><i class="fa fa-envelope"></i> info@coin-wrapper.com</a></div>
                     <div class="address">
                         <i class="fa fa-map-marker"></i> 
                         <div>Coin Wrapper, Office 1000,<br>
