--- a/resources/views/partials/forms/auth/signup-form.twig
+++ b/resources/views/partials/forms/auth/signup-form.twig
@@ -1,23 +1,35 @@
 <form id="signupform">
     <div class="row">
-        <div class="col-md-6 form-text">
-            <input type="text" name="signup[first-name]" placeholder="Enter Your First Name" required>
+        <div class="col-sm-6 col-md-6">
+            <div class="form-text">
+                <input type="text" name="signup[first-name]" placeholder="Enter Your First Name" required>
+            </div>
         </div>
-        <div class="col-md-6 form-text">
-            <input type="text" name="signup[other-names]" placeholder="Enter Your Other Names" required>
+        <div class="col-sm-6 col-md-6">
+            <div class="form-text">
+                <input type="text" name="signup[other-names]" placeholder="Enter Your Other Names" required>
+            </div>
         </div>
-    </div>
-
-    <div class="form-text">
-        <input type="text" name="signup[username]" placeholder="Enter A Preferred Username" required>
     </div>
 
     <div class="row">
-        <div class="col-md-6 form-text">
-            <input type="email" name="signup[email]" placeholder="Enter Your Email Address" required>
+        <div class="col-md-12">
+            <div class="form-text">
+                <input type="text" name="signup[username]" placeholder="Enter A Preferred Username" required>
+            </div>
         </div>
-        <div class="col-md-6 form-text">
-            <input type="text" name="signup[phone-number]" placeholder="Enter Your Phone Number" required>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 col-md-6">
+            <div class="form-text">
+                <input type="email" name="signup[email]" placeholder="Enter Your Email Address" required>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-6">
+            <div class="form-text">
+                <input type="text" name="signup[phone-number]" placeholder="Enter Your Phone Number" required>
+            </div>
         </div>
     </div>
 
