--- a/resources/views/template/partials/html_blocks/navbar.twig
+++ b/resources/views/template/partials/html_blocks/navbar.twig
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="navbar-header">
-                        <button aria-expanded="false" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs">
+                        <button aria-expanded="false" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -13,7 +13,7 @@
                             <div class="logo" style="width:60px;height:60px"></div>
                         </a>
                     </div>
-                    <div style="height: 1px;" role="main" aria-expanded="false" class="navbar-collapse collapse" id="bs">
+                    <div style="height: 1px;" role="main" aria-expanded="false" class="navbar-collapse collapse" id="menu">
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="./">Coin Wrapper</a></li>
                             <li><a href="buy-sell">Buy/Sell</a></li>
@@ -24,6 +24,21 @@
                             </li>
                         </ul>
                     </div>
+
+                    <div style="height: 1px;" role="main" aria-expanded="false" class="navbar-collapse collapse" id="menu">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="dashboard">Dashboard</a></li>
+                            <li class="dropdown">
+                                <a href="#">Username <i class="fa fa-caret-down"></i></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="account-settings">Account Settings</a></li>
+                                    <li><a href="help">Help</a></li>
+                                    <li><a href="">Sign Out</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+
                 </div>
             </div>
         </div>
