--- a/resources/views/partials/forms/auth/signup-form.twig
+++ b/resources/views/partials/forms/auth/signup-form.twig
@@ -1,4 +1,4 @@
-<form action="{{ path_for('auth.signup') }}" method="POST" id="signupform" autocomplete="off">
+<form action="{{ path_for('auth.sign-up') }}" method="POST" id="signupform" autocomplete="off">
     {{ csrf.fields | raw }}
     <div class="row">
         <div class="col-sm-6 col-md-6">
