--- a/resources/views/template/partials/html_blocks/footer.twig
+++ b/resources/views/template/partials/html_blocks/footer.twig
@@ -10,9 +10,9 @@
                 <div class="footer-menu-holder">
                     <h4>Company</h4>
                     <ul class="footer-menu">
-                        <li><a href="about-us">About Us</a></li>
-                        <li><a href="contact-us">Contact Us</a></li>
-                        <li><a href="faqs">FAQs</a></li>
+                        <li><a href="{{ path_for('about-us') }}">About Us</a></li>
+                        <li><a href="{{ path_for('contact-us') }}">Contact Us</a></li>
+                        <li><a href="{{ path_for('faqs') }}">FAQs</a></li>
                     </ul>
                 </div>
             </div>
