--- a/resources/views/template/partials/html_blocks/footer.twig
+++ b/resources/views/template/partials/html_blocks/footer.twig
@@ -20,7 +20,7 @@
                 <div class="footer-menu-holder">
                     <h4>Other</h4>
                     <ul class="footer-menu">
-                        <li><a href="">Terms &amp; Conditions</a></li>
+                        <li><a href="{{ path_for('terms-of-service') }}">Terms of Service</a></li>
                         <li><a href="">Whitepaper</a></li>
                         <li><a href="">Developer</a></li>
                     </ul>
