--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4377,9 +4377,9 @@ svg.logo text {
 #apps {
     background-color: #c44569;
     background-repeat: repeat-x;
-    background-image: -webkit-linear-gradient(90deg, #7360e0, #4f429a);
-    background-image: -o-linear-gradient(90deg, #7360e0, #4f429a);
-    background-image: linear-gradient(90deg, #7360e0, #4f429a);
+    background-image: -webkit-linear-gradient(90deg, #f89cb6, #ed6289);
+    background-image: -o-linear-gradient(90deg, #f89cb6, #ed6289);
+    background-image: linear-gradient(90deg, #f89cb6, #ed6289);
     padding-top: 30px;
     padding-bottom: 40px;
     text-align: center;
@@ -4390,7 +4390,7 @@ svg.logo text {
 }
 
 #apps .row-title {
-    color: #b6acf4;
+    color: #ffffff;
     font-size: 25px;
     margin-top: 10px;
     margin-bottom: 60px;
