--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3066,8 +3066,8 @@ svg.logo text {
     top: -20%;
     width: 100%;
     height: 70%;
-    background-image: url(../img/headbg.svg);
-    background-repeat: no-repeat;
+    background-image: url(../img/whitebg.svg);
+    background-color: #f27a9c background-repeat: no-repeat;
     background-size: 100% 100%;
     -webkit-transform: skewY(-10deg);
     -moz-transform: skewY(-10deg);
@@ -3094,7 +3094,7 @@ svg.logo text {
 
 .info-slider-holder .bold-title span {
     font-size: 31px;
-    color: #84ebad;
+    color: #f2d8df;
     font-weight: 700;
 }
 
