Modified the AuthMiddleware

--- a/resources/views/auth/authorize.twig
+++ b/resources/views/auth/authorize.twig
@@ -17,7 +17,7 @@
                     <div class="row-icon">
                         <img src="assets/img/logo.png" style="width: 80px;">
                     </div>
-                    <div class="row-title">Activate Your Account</div>
+                    <div class="row-title">Authorize Your Account</div>
                 </div>
             </div>
             <div class="row">
