Errorhandling and Settings Configuration

--- a/resources/views/template/partials/html_blocks/footer.twig
+++ b/resources/views/template/partials/html_blocks/footer.twig
@@ -53,7 +53,7 @@
 </div>
 {% endif %}
 
-{% if uri in ['activate', 'authorize', 'terms-of-service'] %}
+{% if uri in ['activate', 'authorize', 'terms-of-service', 'faqs'] %}
 <nav class="navbar navbar-static-bottom custom-footer">
     <div class="container">
         <p class="navbar-text"><a href="{{ path_for('home') }}">Coin Wrapper</a> <span>&copy; {{ "now" | date("Y") }}</span></p>
