--- a/resources/views/website/terms-of-service.twig
+++ b/resources/views/website/terms-of-service.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div id="header-holder" class="inner-header web-hosting-page">
-    <div class="whitebg"><img src="assets/img/headbg.svg" alt=""></div>
+    <div class="whitebg"><img src="assets/img/swapbg.svg" alt=""></div>
     {% include 'template/partials/html_blocks/navbar.twig' %}
     <div id="page-head" class="container-fluid inner-page">
         <div class="container">
@@ -12,7 +12,7 @@
                 <div class="col-md-12 text-center">
                     <div class="page-title">{{ pageTitle }}</div>
                     <div id="page-icon">
-                        <div class="pricing-icon pricing-color1">
+                        <div class="header-icon pricing-color1">
                             <i class="htfy htfy-padlock"></i>
                         </div>
                     </div>
