--- a/resources/views/website/about-us.twig
+++ b/resources/views/website/about-us.twig
@@ -17,13 +17,18 @@
                             <div class="aicon aicon3"><img src="" alt=""></div>
                             <div class="aicon aicon4"><img src="" alt=""></div>
                             <div class="aicon aicon-main">
-                                
+                                <img src="assets/img/logo.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 company-info-holder">
                         <h4>About Coin Wrapper</h4>
                         <div class="info-slider">
+                            <div>
+                                <div class="details-holder">
+                                    <p></p>
+                                </div>
+                            </div>
                             <div>
                                 <div class="details-holder">
                                     <p></p>
