--- a/resources/views/website/buy-sell.twig
+++ b/resources/views/website/buy-sell.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div id="header-holder" class="inner-header">
         <div class="bg-animation"></div>
-        <div class="whitebg"><img src="assets/img/headbg.svg" alt=""></div>
+        <div class="whitebg"><img src="assets/img/swapbg.svg" alt=""></div>
         {% include 'template/partials/html_blocks/navbar.twig' %}
         {% include 'template/partials/html_blocks/page-head.twig' %}
     </div>
