--- a/resources/views/website/contact-us.twig
+++ b/resources/views/website/contact-us.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div id="header-holder" class="inner-header contact-header">
-        <div class="whitebg"><img src="assets/img/headbg.svg" alt=""></div>
+        <div class="whitebg"><img src="assets/img/swapbg.svg" alt=""></div>
         {% include 'template/partials/html_blocks/navbar.twig' %}
         {% include 'template/partials/html_blocks/page-head.twig' %}
     </div>
