--- a/resources/views/template/partials/html_blocks/navbar.twig
+++ b/resources/views/template/partials/html_blocks/navbar.twig
@@ -18,9 +18,9 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="{{ path_for('app.dashboard') }}">Dashboard</a></li>
                             <li class="dropdown">
-                                <a href="#">{{ user.session.name }} <i class="fa fa-caret-down"></i></a>
+                                <a href="#">{{ user.userSession.user_id }} <i class="fa fa-caret-down"></i></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="{{ path_for('app.app.account-settings') }}">Account Settings</a></li>
+                                    <li><a href="{{ path_for('app.account-settings') }}">Account Settings</a></li>
                                     <li><a href="{{ path_for('app.help') }}">Help</a></li>
                                     <li><a href="{{ path_for('auth.sign-out') }}">Sign Out</a></li>
                                 </ul>
