--- a/resources/views/dashboard/dashboard.twig
+++ b/resources/views/dashboard/dashboard.twig
@@ -3,7 +3,7 @@
 
 
 {% block body %}
-    <div id="header-holder" class="inner-header">
+    <div id="header-holder" class="inner-header dashboard-header">
         <div class="whitebg"><img src="assets/img/headbg.svg" alt=""></div>
         {% include 'template/partials/html_blocks/navbar.twig' %}
     </div>
