--- a/resources/views/website/faqs.twig
+++ b/resources/views/website/faqs.twig
@@ -3,7 +3,7 @@
 
 
 {% block body %}
-    <div id="header-holder" class="inner-header">
+    <div id="header-holder" class="inner-header logo-alt">
         <div class="bg-animation"></div>
         <div class="whitebg"><img src="assets/img/swapbg.svg" alt=""></div>
         {% include 'template/partials/html_blocks/navbar.twig' %}
