--- a/resources/views/errors/405.twig
+++ b/resources/views/errors/405.twig
@@ -6,17 +6,17 @@
             <div class="d-flex col-md justify-content-center align-items-center order-2 order-md-1 position-relative p-5">
                 <div class="error-bg-skew bg-white"></div>
                 <div class="text-md-left text-center">
-                    <h1 class="display-2 font-weight-bolder mb-4">Whoops...</h1>
-                    <div class="text-xlarge font-weight-light mb-5">We couldn't find the page you are looking for.</div>
+                    <h1 class="display-2 font-weight-bolder mb-4">Oops...</h1>
+                    <div class="text-xlarge font-weight-light mb-5">If the problem continues, <a href="{{ path_for('contact-us') }}" ><u>contact us</u></a>.</div>
                     <div class="buttons-holder">
-                        <a href="{{ path_for('home') }}" class="ybtn ybtn-accent-color">←&nbsp; Go Back</a>
+                        <a href="" class="ybtn ybtn-accent-color">Reload</a>
                     </div>
                 </div>
             </div>
             <div class="d-flex col-md-5 justify-content-center align-items-center order-1 order-md-2 text-center text-white p-5">
                 <div>
-                    <div class="error-code font-weight-bolder mb-2">404</div>
-                    <div class="error-description font-weight-light">Not Found</div>
+                    <div class="error-code font-weight-bolder mb-2">405</div>
+                    <div class="error-description font-weight-light">Request Method Not Allowed</div>
                 </div>
             </div>
         </div>
