--- a/resources/views/template/app.twig
+++ b/resources/views/template/app.twig
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
     <title>{{ app.name }} - {{ pageTitle }}</title>
+    {% if uri in ['not-found-404','not-allowed-405'] %}
+    <link rel="stylesheet" type="text/css" href="{{ base_url() }}/assets/css/bootstrap-v4.min.css">
+    <link rel="stylesheet" type="text/css" href="{{ base_url() }}/assets/css/uikit.css">
+    {% else %}
     <link rel="stylesheet" type="text/css" href="{{ base_url() }}/assets/css/bootstrap.min.css">
+    {% endif %}
     <link rel="stylesheet" type="text/css" href="{{ base_url() }}/assets/css/bootstrap-slider.min.css">
     <link rel="stylesheet" type="text/css" href="{{ base_url() }}/assets/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="{{ base_url() }}/assets/css/slick.css">
@@ -17,7 +22,11 @@
     {% block body %} {% endblock %}
 
     <script src="{{ base_url() }}/assets/js/jquery.min.js"></script>
+    {% if uri in ['not-found-404','not-allowed-405'] %}
+    <script src="{{ base_url() }}/assets/js/bootstrap-v4.min.js"></script>
+    {% else %}
     <script src="{{ base_url() }}/assets/js/bootstrap.min.js"></script>
+    {% endif %}
     <script src="{{ base_url() }}/assets/js/bootstrap-slider.min.js"></script>
     <script src="{{ base_url() }}/assets/js/slick.min.js"></script>
     <script src="{{ base_url() }}/assets/js/main.js"></script>
